# train_finance

./: .gitignore  copy_model.sh  export_coreml.py  generate_train_csv.py  merge_lora.py  pyproject.toml  test_demo.py  train_lora_mps.py  verify_coreml.py
TestCoreML/TestCoreML/: ContentView.swift  FinanceNLP.swift  TestCoreMLApp.swift
TestCoreML/TestCoreML.xcodeproj/: project.pbxproj
TestCoreML/TestCoreML.xcodeproj/project.xcworkspace/xcuserdata/ityike.xcuserdatad/: UserInterfaceState.xcuserstate
data/: train.csv  train_3000.csv  train_30000.csv
