[project]
name = "train-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "coremltools>=8.3.0",
    "datasets>=4.4.1",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
